@@ -1,3 +1,9 @@
+2004-01-18  Dave Malcolm  <david@davemalcolm.demon.co.uk>
+
+	* cong-editor-line-manager.h, cong-editor-line-manager.c, cong-editor-line-manager-simple.h, cong-editor-line-manager-simple.c, cong-editor-line-manager-span-wrapper.h, cong-editor-line-manager-span-wrapper.c
+
+	New files
+
 2004-01-16  Daniel van Eeden  <daniel_e@dds.nl>
 
 	* cong-file-new.c, cong-primary-window.c & global.h
